ajout calendrier presque fontionnel

--- a/Ouizz/www/js/demo.html
+++ b/Ouizz/www/js/demo.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <head>
-	<script type="text/javascript" src="../ics.deps.min.js"></script>
+	<script type="text/javascript" src="ics.deps.min.js"></script>
 	<script type="text/javascript" src="demo.js"></script>
-	<style>
-
-	</style>
 </head>
 <body>
 	<div class="wrap">
 		<a href="javascript:cal_single.download('Awesome Day')">Single Event</a>
-		<br>
+		
 	</div>
 </html>
