--- a/Ouizz/www/index.html
+++ b/Ouizz/www/index.html
@@ -33,8 +33,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-	<script type="text/javascript" src="js/ics.deps.min.js"></script>
-	<script type="text/javascript" src="js/demo/demo.js"></script>
+    <script src="js/ics.deps.min.js"></script>
+    <script src="js/demo.js"></script>
   </head>
   <body ng-app="starter">
     <!--
